express/notejam/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-test-deployment
  namespace: default
  labels:
    app: gke-test-deployment
spec:
  replicas: 2 # number of pods
  selector:
    matchLabels:
      app: gke-test-deployment
  template:
    metadata:
      labels:
        app: gke-test-deployment
    spec:
      containers:
        - name: gke-test-image
          image: gcr.io/nordcloud-300113/gke-test-image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
