express/notejam/k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-loadbalance-expose-service
spec:
  type: LoadBalancer
  selector:
    app: gke-test-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
