express/notejam/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-test-deployment
spec:
  selector:
    app: gke-test-deployment
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
