express/notejam/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-test-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-test-ip"
spec:
  backend:
    serviceName: gke-test-deployment
    servicePort: 3000
